# Treinamento

./: README.md  aula_modelo.md  example-class.md  waraps_tutorial.md
CPP_OOP/: main  main.cpp
Drones/: 1_intro_eletronica.md  2 - Componentes do Drone.md  2_componentes_drone.md  3.1_ros.md  3.2_px4.md  3_ros_px4.md  4_nosso_repo.md  5_.md  6_c++.md
Drones/4_roomba_example/: README.md  constants.py  state_machine.py
Drones/pkgs/: README.md
Drones/pkgs/pubsub/: package.xml  setup.py
Drones/pkgs/pubsub/pubsub/: publisher.py  subscriber.py
Python_OOP/: Lab1_Python.py  main  main.cpp
Voo Horizontal/: 2_componentes_evtol.md  3_design_evtol.md
drone_fsm/src/drone_control/: CMakeLists.txt  README.md  package.xml
drone_fsm/src/drone_control/include/: initial_takeoff_state.hpp  landing_state.hpp  return_home_state.hpp  takeoff_state.hpp  visit_bases_state.hpp
drone_fsm/src/drone_control/src/: land_on_bases.cpp
drone_fsm/src/drone_interface/: CMakeLists.txt  package.xml
drone_fsm/src/drone_interface/include/drone/: Drone.hpp
drone_fsm/src/drone_interface/src/: Drone.cpp
drone_fsm/src/gabarito_drone_control/include/: Base.hpp  initial_takeoff_state.hpp  landing_state.hpp
drone_fsm/src/gabarito_drone_control/src/: land_on_bases.cpp
